# Kore

./: .gitignore  CMakeLists.txt  MANUAL.md  README.md  main.cpp
include/: AnsiFormat.h  AppState.h  Clip.h  ClipDialog.h  Cursor.h  Display.cpp  Display.h  FileDialog.h  PlaylistRenderer.h  TerminalFace.h  TerminalSettings.h  Track.h  WavWriter.h  WaveGenerator.h
include/audio/: Clip.h  Track.h  WaveGenerator.h
include/core/: AppState.h  Cursor.h  EventSystem.h
include/ui/: Display.h  FileDialog.h
include/util/: TerminalSettings.h
src/: AppState.cpp  Clip.cpp  ClipDialog.cpp  Cursor.cpp  Display.cpp  EventSystem.cpp  FileDialog.cpp  PlaylistRenderer.cpp  TerminalFace.cpp  TerminalSettings.cpp  Track.cpp  WavWriter.cpp  WaveGenerator.cpp
src/audio/: Clip.cpp  PlaylistRenderer.cpp  Track.cpp  WavWriter.cpp  WaveGenerator.cpp
src/core/: AppState.cpp  Cursor.cpp  EventSystem.cpp
src/ui/: ClipDialog.cpp  Display.cpp  FileDialog.cpp
src/util/: TerminalSettings.cpp
